// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ModalInput] should match empty snapshot 1`] = `
<div>
  <input
    class="fixed dark:bg-slate-600 dark:text-slate-100"
    style="padding: 0.25rem; left: 0px; top: 0px; width: calc(0px + 2 * 0.25rem); min-width: 120px;"
    type="text"
    value=""
  />
</div>
`;

exports[`[ModalInput] should match snapshot after onChange error 1`] = `
<div>
  <input
    class="fixed bg-rose-100 dark:bg-rose-400"
    style="padding: 0.25rem; left: 0px; top: 0px; width: calc(0px + 2 * 0.25rem); min-width: 120px;"
    type="text"
    value="hello world"
  />
  <span
    class="absolute pt-0.5 text-xs rounded-b-sm  bg-rose-100 text-rose-500 dark:bg-rose-400 dark:text-rose-50"
  >
    Error message
  </span>
</div>
`;
